# z80

./: .gitignore  CMakeLists.txt  bitInstr.py  z80.c  z80.h
.ccls-cache/@@home@zcarp@Documents@z80@z80/: @usr@include@alloca.h.blob  @usr@include@c++@12@bits@std_abs.h.blob  @usr@include@c++@12@cstdlib.blob  @usr@include@c++@12@stdlib.h.blob  @usr@include@endian.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@inttypes.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@x86_64-linux-gnu@bits@atomic_wide_counter.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes-arch.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes.h.blob  @usr@include@x86_64-linux-gnu@bits@select.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-intn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-uintn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdio_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@stdlib-float.h.blob  (+43 more)
src/: bitInstr.py  common.h  jsonTests.c  main.c  opcodes.c  z80.c  z80.h  zex.c
(+11 files in other folders)
